--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                 <div class="w-full px-4 md:w-1/2">
                     <h1 class="font-extrabold uppercase text-primary mb-5">Skill</h1>
                     <p class="flex flex-wrap items-center justify-center">
-                        <img class="h-24 mb-3 mx-2" src="assets/picture/icon/Solidworks.png" alt="">
-                        <img class="h-20 mb-3 px-1" src="assets/picture/icon/Fusion360.png" alt="">
-                        <img class="h-20 mb-3 px-1" src="assets/picture/icon/Inventorpng.png" alt="">
-                        <img class="h-20 mb-3 px-1 "src="assets/picture/icon/Meshmixer.png" alt="">
-                        <img class="h-20 mb-3 px-3" src="assets/picture/icon/Cura.png" alt="">
+                        <img class="h-24 mb-3 mx-2" src="assets/picture/icon/solidworks.png" alt="solidworks">
+                        <img class="h-20 mb-3 px-1" src="assets/picture/icon/fusion360.png" alt="fusion360">
+                        <img class="h-20 mb-3 px-1" src="assets/picture/icon/Inventor.png" alt="inventor">
+                        <img class="h-20 mb-3 px-1 "src="assets/picture/icon/Meshmixer.png" alt="meshmixer">
+                        <img class="h-20 mb-3 px-3" src="assets/picture/icon/cura.png" alt="cura">
                     </p>
                 </div>            
             </div>
