--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TioScesar!</title>
-    <link rel="icon" href="assets/picture/icon/favicon.png">
+    <link rel="icon" href="assets/picture/favicon.png">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <link href="./src/output.css" rel="stylesheet">
     <link href="./hamburgers.css" rel="stylesheet">
