--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     
                         <div class="w-full px-4 ">
                             <div class="mb-3 items-center justify-center flex flex-wrap">
-                                <a href="https://wa.link/3o1wdf" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-55 transition duration-300 ease-in-out">Lets Rock & Roll  🤘</a>
+                                <a href="https://wa.link/17cfld" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-55 transition duration-300 ease-in-out">Lets Rock & Roll  🤘</a>
                             </div>
                             
                             <div class="flex items-center justify-center flex-wrap">
